--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,12 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.ui.grid.container {
+  border-style: solid;
+  border-width: 5px;
+}
+
+#hidden-info{
+  display: none;
+}
